--- a/src/app/modules/admin/components/start-filling-action/start-filling-action.component.html
+++ b/src/app/modules/admin/components/start-filling-action/start-filling-action.component.html
@@ -32,34 +32,10 @@
     </div>
     <div id="submittedbtns" *ngIf="startfilling">
 
-        <button (click)="filling('startfilling')" mat-raised-button color="primary"
-            (click)="startfillingaction()" [disabled]="firstformdisable">Start</button>
-        <input type="text" placeholder="{{startfilling}}" formControlName="statusCd" [(ngModel)]="startfilling" hidden>
-        
+        <button  mat-raised-button color="primary"
+            (click)="startfillingaction()" >Start</button>
+      
+            <button type="submit" class="btn btn-danger"  mat-dialog-close style="font-family: initial;font-weight: bolder;width: 100px;margin-left: 20px;">Cancel</button>
     </div>
 </form>
 
-<div *ngIf="secondFormPopupVisible" id="secondformmaindiv">
-
-    <form [formGroup]="startFillingform" id="secondform">
-        <div class="row">
-            <div class="col-3">
-
-                <input type="text" formControlName="orderId" class="form-control" [(ngModel)]="Orderdetails.orderId"
-                    placeholder="{{Orderdetails.orderId}}" hidden>
-
-            </div>
-            <label id="enterstafflablel">Enter Staff Code: </label>
-            <div class="col-3" id="staffcd">
-                <input type="number" formControlName="staffCd" class="form-control">
-            </div>
-
-            <div class="col-3" id="sbmtbtn">
-                <button type="submit" (click)="staffVerificationForm()" class="btn btn-success">Submit</button>
-                <button mat-raised-button color="warn" mat-dialog-close style="margin-left: 20px;">Cancel</button>
-            </div>
-        </div>
-
-
-    </form>
-</div>
