--- a/src/app/modules/admin/components/finish-shipping-action/finish-shipping-action.component.html
+++ b/src/app/modules/admin/components/finish-shipping-action/finish-shipping-action.component.html
@@ -1,28 +1,28 @@
-
-
-
-
- <form [formGroup]="finishshippingform" id="form">
+<form [formGroup]="finishshippingform" id="form">
 
 
     <h1 id="headding" style="font-family: initial;font-weight: bolder;"> Finish Shipping</h1>
-    <button mat-raised-button color="" mat-dialog-close  id="crossbtn">X</button>
- 
+    <button mat-raised-button color="" mat-dialog-close id="crossbtn">X</button>
+
     <div class="card" class="card1">
 
         <div class="card-body" class="card-body1">
             <div class="row">
                 <div>
-                    <img src="https://media.istockphoto.com/id/1095468748/vector/qr-code-abstract-vector-modern-bar-code-sample-for-smartphone-scanning-isolated-on-white.jpg?s=612x612&w=0&k=20&c=Jnh2TAkAFm7QpaBgCyCuGbCA6nomDfk4-XiTsBhbHFk=" width="120px;" height="120px" id="scanner">
-                     <b>Order Track Ref &nbsp;&nbsp;&nbsp;:</b>
-                     <p>{{Orderdetails.orderTrackRef}}</p>
-                    <b>OrderId &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</b>
-                    <p><input type="text" formControlName="orderId" placeholder="{{Orderdetails.orderId}}" [(ngModel)]="Orderdetails.orderId" [ngClass]="{'hide-input-border': shouldHideBorder}" readonly></p> 
+                    <img src="https://media.istockphoto.com/id/1095468748/vector/qr-code-abstract-vector-modern-bar-code-sample-for-smartphone-scanning-isolated-on-white.jpg?s=612x612&w=0&k=20&c=Jnh2TAkAFm7QpaBgCyCuGbCA6nomDfk4-XiTsBhbHFk="
+                        width="120px;" height="120px" id="scanner">
+                    <b>Order Track Ref &nbsp;&nbsp;&nbsp;&nbsp;:</b>
+                    <p>{{Orderdetails.orderTrackRef}}</p>
+                    <b>OrderId
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</b>
+                    <p><input type="text" formControlName="orderId" placeholder="{{Orderdetails.orderId}}"
+                            [(ngModel)]="Orderdetails.orderId" [ngClass]="{'hide-input-border': shouldHideBorder}"
+                            readonly></p>
                     <b>Name
-                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</b>
+                        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;:</b>
                     <p>{{Orderdetails.firstName}}</p>
-                    <b>Mobile Number &nbsp;&nbsp;&nbsp;:</b>
-                    <p>{{Orderdetails.mobileNumber}}</p>
+                    <!-- <b>Mobile Number &nbsp;&nbsp;&nbsp;:</b>
+                    <p>{{Orderdetails.mobileNumber}}</p> -->
 
                 </div>
                 <div>
@@ -56,36 +56,11 @@
     <div id="submittedbtns">
 
 
-        <button (click)="finishShipping('finishshipping')" (click)="submit()"  mat-raised-button color="primary" 
+        <button (click)="submit()" mat-raised-button color="primary"
             style="margin-left:10px;width: 90px;">Start</button>
-        <input type="text" placeholder="{{finishshipping}}" formControlName="statusCd" [(ngModel)]="finishshipping" hidden>
-       
+
+            <button type="submit" class="btn btn-danger"  mat-dialog-close style="font-family: initial;font-weight: bolder;width: 100px;margin-left: 20px;">Cancel</button>
     </div>
-   
+
 </form>
-
-<div *ngIf="secondFormPopupVisible" id="secondformmaindiv">
-
-    <form [formGroup]="finishshippingform" id="secondform">
-        <div class="row">
-            <div class="col-3">
-
-                <input type="text" formControlName="orderId" class="form-control" [(ngModel)]="Orderdetails.orderId"
-                    placeholder="{{Orderdetails.orderId}}" hidden>
-
-            </div>
-            <label id="enterstafflablel" style="font-family: initial;font-weight: bolder;">Enter Staff Code: </label>
-            <div class="col-3" id="staffcd">
-                <input type="number" formControlName="staffCd" class="form-control">
-            </div>
-
-            <div class="col-3" id="sbmtbtn">
-                <button type="submit" (click)="submitSecondForm()" class="btn btn-success">Submit</button>
-                <button mat-raised-button color="warn" mat-dialog-close style="margin-left: 20px;">Cancel</button>
-            </div>
-        </div>
-
-
-    </form>
-</div>
 
