--- a/src/app/modules/admin/components/verify-payment/verify-payment.component.scss
+++ b/src/app/modules/admin/components/verify-payment/verify-payment.component.scss
@@ -11,8 +11,16 @@
 .card1{
     height: 200px;
     margin-top: 50px;
-    border: ridge 10px;
+    border: ridge 1px;
     height: 500px;
+    border-color: black;
+    border-radius: 15px;
+}
+h1{
+    font-family: initial;
+    font-weight: bolder;
+    margin-left: 60px;
+    font-size: 28px;
 }
 // .card-body1{
 //     // display: inline-flex;
@@ -20,16 +28,17 @@
 //     // margin-top: 50px;
 // }
 .lables{
-    font-size: 15px;
-    font-weight: bold;
+    font-size: 20px;
+    font-weight: bolder;
+    font-family: initial;
     margin-left: 18px;
     margin-top: 20px;
   
 }
 #submittedbtns{
      margin-top:-200px;
-    margin-left: 600px;
-   
+    margin-left: 500px;
+   font-family: initial;
    
 }
 #dropdown{
@@ -60,16 +69,7 @@ h1{
     margin-top: -50px;
 }
 
-#secondform{
-    margin-top: -100px;
-  }
-#secondformmaindiv{
-    border: ridge 10px;
- width: 800px;
- height: 200px;
- margin-top: -50px;
-margin-left: 300px;
-}
+
 #staffcd{
     margin-top: 120px;
     position: absolute;
@@ -78,7 +78,7 @@ margin-left: 300px;
   
 #sbmtbtn{
     margin-top: 200px;
-    margin-left: 300px;
+    margin-left: 200px;
     position: absolute;
 }
 #crossbtn{
@@ -86,9 +86,9 @@ margin-left: 300px;
     margin-top: -50px;
      color: red;
   }
-  #maindiv{
-    overflow: auto;
-}
+//   #maindiv{
+//     overflow: auto;
+// }
 @media screen and (min-width:360px) and (max-width:1350px){
     #form{
         width: 600px;
@@ -103,16 +103,10 @@ margin-left: 300px;
         margin-top: 60px;
         position: absolute;
     }
-    #secondformmaindiv{
-        border: ridge 10px;
-     width: 800px;
-     height: 200px;
-     margin-top: 40px;
-    margin-left: 200px;
-    }
-    #maindiv{
-        overflow: auto;
-    }
+   
+    // #maindiv{
+    //     overflow: auto;
+    // }
     #crossbtn{
         margin-left: 800px;
         margin-top: -50px;
