--- a/src/app/modules/admin/components/start-filling-action/start-filling-action.component.html
+++ b/src/app/modules/admin/components/start-filling-action/start-filling-action.component.html
@@ -33,7 +33,7 @@
     <div id="submittedbtns" *ngIf="startfilling">
 
         <button  mat-raised-button color="primary"
-            (click)="startfillingaction()" >Start</button>
+            (click)="startfillingaction()" style="width: 100px;font-family: initial;font-weight: bolder;" >Start</button>
       
             <button type="submit" class="btn btn-danger"  mat-dialog-close style="font-family: initial;font-weight: bolder;width: 100px;margin-left: 20px;">Cancel</button>
     </div>
