--- a/src/app/modules/admin/components/update-staff/update-staff.component.html
+++ b/src/app/modules/admin/components/update-staff/update-staff.component.html
@@ -195,7 +195,7 @@
             <button type="submit" class="btn btn-success" (click)=" onSubmit()"
                 style="width: 100px;" style="font-family: initial;font-weight: bolder;">Save</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <button type="submit" class="btn btn-danger" style="width: 100px;" mat-dialog-close style="font-family: initial;font-weight: bolder;">Cancel</button>
-            <div *ngIf="submitted && !UpdateStaffform.valid" class="text-danger">All fields are required.</div>
+            <div *ngIf="submitted && !UpdateStaffform.valid" class="text-danger">Form Is Invalid.</div>
         </div>
     </div>
    
