--- a/src/app/modules/admin/components/start-filling-action/start-filling-action.component.scss
+++ b/src/app/modules/admin/components/start-filling-action/start-filling-action.component.scss
@@ -4,9 +4,10 @@
  */
     #form{
         width:1100px;
-        height: auto;
+        height: 800px;
       //  border: ridge 3px;
-     
+     overflow-y: auto;
+     overflow-x: hidden;
     }
 
 #table{
@@ -168,15 +169,17 @@ font-family:initial ;
 h1{
   margin-left: 500px;
   color: coral;
-  font-weight:bolder
+  font-weight:bolder;
+  font-family: initial;
+  font-size: 30px;
 }
 
 #printbtn{
-  margin-left: 890px;
+  margin-left: 810px;
   width: 100px;
   height: 30px;
   color: cadetblue;
-  margin-top:10px;
+  margin-top:20px;
   position: absolute;
 }
 
@@ -199,7 +202,7 @@ h1{
   font-size: 18px;
 }
 #crossbtn{
-  margin-left: 1040px;
+  margin-left: 1000px;
   margin-top: -50px;
    color: red;
 }
