--- a/src/app/modules/admin/components/verify-payment/verify-payment.component.html
+++ b/src/app/modules/admin/components/verify-payment/verify-payment.component.html
@@ -1,4 +1,4 @@
-<button [print]="['printverifipaymentform', config]" id="printbtn" style="font-family: initial;">Print</button>
+<button [print]="['printverifipaymentform', config]" id="printbtn" style="font-family: initial;font-weight: bolder;font-family: initial;">Print</button>
 <div id="maindiv">
     <form  id="form">
         <button mat-raised-button color="" mat-dialog-close id="crossbtn">X</button>
@@ -40,19 +40,20 @@
                         <input type="text" class="form-control" [(ngModel)]="Orderdetails.totalAmount"
                             placeholder="{{Orderdetails.totalAmount}}" [attr.disabled]="isDisabled ? true : null">
                     </div>
+                   
                 </div>
 
 
-
+              
 
 
             </div>
         </div>
         <div id="submittedbtns">
 
-            <button class="btn btn-success" (click)="paymentSuccess(orderId)" style="width: 100px;">PASS</button>
+            <button class="btn btn-success" (click)="paymentSuccess(orderId)" style="width: 100px;font-weight: bolder;">PASS</button>
 
-            <button class="btn btn-primary" (click)="paymentFailed()" style="margin-left:20px;width:100px">FAIL</button>
+            <button class="btn btn-primary" (click)="paymentFailed()" style="margin-left:20px;width:100px;font-weight: bolder;">FAIL</button>
             <button type="submit" class="btn btn-danger"  mat-dialog-close style="font-family: initial;font-weight: bolder;width: 100px;margin-left: 20px;">Cancel</button>
         </div>
     </form>
