--- a/src/app/modules/admin/components/verify-payment/verify-payment.component.scss
+++ b/src/app/modules/admin/components/verify-payment/verify-payment.component.scss
@@ -47,9 +47,11 @@ h1{
   height: 40px;
 }
 h1{
-  margin-left: 550px;
+  margin-left: 600px;
   color:coral;
   margin-top: 30px;
+  font-family: initial;
+  font-weight: bolder;
   
 }
 #printbtn{
